test: updated tests for new EBikeEnum